[tool.poetry]
name = "dj-hotkey"
version = "0.1.0"
description = ""
authors = ["scaboodles <owenj.wolff2@gmail.com>"]
readme = "README.md"
packages = [{include = "dj_hotkey"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
